--- a/calculator.css
+++ b/calculator.css
@@ -29,6 +29,7 @@ body{
     border-radius: 10px;
     border: 2px solid black;
     padding: 16px;
+    height:20%;
     margin-bottom: 32px;
     display:flex;
 }
