--- a/calculator.css
+++ b/calculator.css
@@ -31,7 +31,10 @@ body{
     padding: 16px;
     height:20%;
     margin-bottom: 32px;
-    display:flex;
+    font-size: 48px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
 }
 
 .numPad{
